Update devcontainer.json to disable Node runtime for SQLTools

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -19,7 +19,8 @@
             "driver": "PostgreSQL",
             "name": "Local"
           }
-        ]
+        ],
+        "sqltools.useNodeRuntime": false
       }
     }
   },
