--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -8,6 +8,10 @@ services:
       - ../..:/workspaces:cached
     environment:
       DATABASE_URL: postgres://user:password@db:5432/oscargdi
+      AWS_ACCESS_KEY_ID: aws_access_key_id
+      AWS_SECRET_ACCESS_KEY: aws_secret_access_key
+      AWS_DEFAULT_REGION: us-east-1
+      AWS_ENDPOINT_URL: http://localstack:4566
     command: sleep infinity
   db:
     image: postgres:latest
@@ -18,5 +22,13 @@ services:
       POSTGRES_USER: user
       POSTGRES_DB: oscargdi
       POSTGRES_PASSWORD: password
+  localstack:
+    image: localstack/localstack:2.3.2
+    environment:
+      SERVICES: sqs
+    ports:
+      - '4566-4597:4566-4597'
+    volumes:
+      - "/var/run/docker.sock:/var/run/docker.sock"
 volumes:
   postgres-data:
