Add AWS CLI feature to devcontainer.json

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -25,6 +25,9 @@
     }
   },
   "dockerComposeFile": "docker-compose.yml",
+  "features": {
+    "ghcr.io/devcontainers/features/aws-cli:1": {}
+  },
   "name": "My App",
   "postCreateCommand": "./.devcontainer/postCreateCommand.sh",
   "service": "app",
