Add pydantic package to Pipfile

--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,7 @@ gunicorn = "*"
 django-debug-toolbar = "*"
 django-allauth = "*"
 django-extensions = "*"
+pydantic = "*"
 
 [dev-packages]
 pre-commit = "*"
