--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -8,10 +8,7 @@ services:
       - ../..:/workspaces:cached
     environment:
       DATABASE_URL: postgres://user:password@db:5432/oscargdi
-      AWS_ACCESS_KEY_ID: aws_access_key_id
-      AWS_SECRET_ACCESS_KEY: aws_secret_access_key
-      AWS_DEFAULT_REGION: us-east-1
-      AWS_ENDPOINT_URL: http://localstack:4566
+      AWS_ENDPOINT_URL: http://@localstack:4566
     command: sleep infinity
   db:
     image: postgres:latest
